@@ -5,3 +5,4 @@ Fix: Possible soloution for a couple of very rare lua errors
 Feature: Clicking on data broker opens missions report (same as clicking on minimap icon)
 Feature: In follower rectuiting page, information about which follower have traits and counter are show in dropdown
 Feature: Broker now reports status of producing lot.
+Feature: In available mission we now show the improved mission duration
